fix: section awesome

--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AXIT</title>
-    <link rel="stylesheet" href="assets/fonts/fonts.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/awesome.css">
 </head>
 <body>
     <main>
         <section class="awesome">
-            <div class="awesome__header">
-                <h2>WHY THIS IS AWESOME</h2>
-                <div class="awesome__header__separator"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="awesome__cards">
-                <div class="awesome__cards__card">
-                    <img src="./assets/images/icons/about_icon_1.png" alt="lamp">
-                    <h4>Thoughtful Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+            <div class="wrapper">
+                <div class="title-block">
+                    <h2>WHY THIS IS AWESOME</h2>
+                    <div class="title-block__separator"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="awesome__cards__card">
-                    <img src="./assets/images/icons/about_icon_2.png" alt="keyboard">
-                    <h4>Thoughtful Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
-                </div>
-                <div class="awesome__cards__card">
-                    <img src="./assets/images/icons/about_icon_3.png" alt="lightning">
-                    <h4>Thoughtful Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                <div class="awesome__cards">
+                    <div class="awesome__cards__card">
+                        <img src="./assets/images/icons/about_icon_1.svg" alt="lamp">
+                        <h3>Thoughtful Design</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                    <div class="awesome__cards__card">
+                        <img src="./assets/images/icons/about_icon_2.svg" alt="keyboard">
+                        <h3>Thoughtful Design</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                    <div class="awesome__cards__card">
+                        <img src="./assets/images/icons/about_icon_3.svg" alt="lightning">
+                        <h3>Thoughtful Design</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
                 </div>
             </div>
         </section>
