feat: add section
add section options

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/awesome.css">
+    <link rel="stylesheet" href="assets/css/options.css">
 </head>
 <body>
     <main>
@@ -33,6 +34,50 @@
                         <img src="./assets/images/icons/about_icon_3.svg" alt="lightning">
                         <h3>Thoughtful Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="options">
+            <div class="wrapper">
+                <div class="title-block">
+                    <h2>PRICING OPTIONS</h2>
+                    <div class="title-block__separator"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="options__cards">
+                    <div class="options__cards__card">
+                        <p class="options__cards__card_title">Basic</p>
+                        <p class="options__cards__card_price">$10</p>
+                        <p class="options__cards__card_why">Free for life</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                    </div>
+                    <div class="options__cards__card options__cards__card_up">
+                        <p class="options__cards__card_title">Optima</p>
+                        <p class="options__cards__card_price">$20</p>
+                        <p class="options__cards__card_why">Free for life</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                    </div>
+                    <div class="options__cards__card">
+                        <p class="options__cards__card_title">Pro</p>
+                        <p class="options__cards__card_price">$30</p>
+                        <p class="options__cards__card_why">Free for life</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
+                        <p>1 Gb Of Space</p>
                     </div>
                 </div>
             </div>
