feat: add section
add section saying

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/awesome.css">
     <link rel="stylesheet" href="assets/css/options.css">
+    <link rel="stylesheet" href="assets/css/saying.css">
 </head>
 <body>
     <main>
@@ -80,6 +81,68 @@
                         <p>1 Gb Of Space</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="saying">
+            <div class="wrapper">
+                <div class="title-block">
+                    <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
+                    <div class="title-block__separator"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="saying__cards">
+                    <div class="saying__cards__card">
+                        <p class="saying__cards__card__comment">Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.</p>
+                        <img src="assets/images/icons/triangle-gray.svg" alt="triangle">
+                        <div class="saying__cards__card__person">
+                            <div>
+                                <img src="assets/images/avatar-davis.png" alt="davis">
+                            </div>
+                            <div>
+                                <h3>Davis Rhiel Madsen</h3>
+                                <p>Manager</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="saying__cards__card">
+                        <p class="saying__cards__card__comment">Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.</p>
+                        <img src="assets/images/icons/triangle-gray.svg" alt="triangle">
+                        <div class="saying__cards__card__person">
+                            <div>
+                                <img src="assets/images/avatar-jaydon.png" alt="davis">
+                            </div>
+                            <div>
+                                <h3>Jaydon Rosser</h3>
+                                <p>Manager</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="saying__cards__card">
+                        <p class="saying__cards__card__comment">Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.</p>
+                        <img src="assets/images/icons/triangle-gray.svg" alt="triangle">
+                        <div class="saying__cards__card__person">
+                            <div>
+                                <img src="assets/images/avatar-cooper.png" alt="davis">
+                            </div>
+                            <div>
+                                <h3>Cooper Dorwart</h3>
+                                <p>Manager</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>    
             </div>
         </section>
     </main>    
