--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/awesome.css">
-    <link rel="stylesheet" href="assets/css/options.css">
-    <link rel="stylesheet" href="assets/css/saying.css">
 </head>
 <body>
     <main>
@@ -20,18 +17,18 @@
                     <div class="title-block__separator"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="awesome__cards">
-                    <div class="awesome__cards__card">
+                <div class="cards-wrapper">
+                    <div class="awesome__card">
                         <img src="./assets/images/icons/about_icon_1.svg" alt="lamp">
                         <h3>Thoughtful Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                     </div>
-                    <div class="awesome__cards__card">
+                    <div class="awesome__card">
                         <img src="./assets/images/icons/about_icon_2.svg" alt="keyboard">
                         <h3>Thoughtful Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                     </div>
-                    <div class="awesome__cards__card">
+                    <div class="awesome__card">
                         <img src="./assets/images/icons/about_icon_3.svg" alt="lightning">
                         <h3>Thoughtful Design</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
@@ -46,11 +43,11 @@
                     <div class="title-block__separator"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="options__cards">
-                    <div class="options__cards__card">
-                        <p class="options__cards__card_title">Basic</p>
-                        <p class="options__cards__card_price">$10</p>
-                        <p class="options__cards__card_why">Free for life</p>
+                <div class="cards-wrapper">
+                    <div class="options__card">
+                        <p>Basic</p>
+                        <p>$10</p>
+                        <p>Free for life</p>
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
@@ -58,10 +55,10 @@
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
                     </div>
-                    <div class="options__cards__card options__cards__card_up">
-                        <p class="options__cards__card_title">Optima</p>
-                        <p class="options__cards__card_price">$20</p>
-                        <p class="options__cards__card_why">Free for life</p>
+                    <div class="options__card options__card_up">
+                        <p>Optima</p>
+                        <p>$20</p>
+                        <p>Free for life</p>
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
@@ -69,10 +66,10 @@
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
                     </div>
-                    <div class="options__cards__card">
-                        <p class="options__cards__card_title">Pro</p>
-                        <p class="options__cards__card_price">$30</p>
-                        <p class="options__cards__card_why">Free for life</p>
+                    <div class="options__card">
+                        <p>Pro</p>
+                        <p>$30</p>
+                        <p>Free for life</p>
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
                         <p>1 Gb Of Space</p>
@@ -83,6 +80,7 @@
                 </div>
             </div>
         </section>
+        
         <section class="saying">
             <div class="wrapper">
                 <div class="title-block">
@@ -90,14 +88,14 @@
                     <div class="title-block__separator"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="saying__cards">
-                    <div class="saying__cards__card">
-                        <p class="saying__cards__card__comment">Lorem ipsum dolor sit amet, 
+                <div class="cards-wrapper">
+                    <div class="saying__card">
+                        <p class="saying__card__comment">Lorem ipsum dolor sit amet, 
                             consectetur adipisicing elit. Doloribus 
                             accusamus expedita repellat similique 
                             odio aspernatur ex, architecto eaque 
                             quo suscipit.</p>
-                        <div class="saying__cards__card__person">
+                        <div class="saying__card__person">
                             <div>
                                 <img src="assets/images/avatar-davis.png" alt="davis">
                             </div>
@@ -107,13 +105,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="saying__cards__card">
-                        <p class="saying__cards__card__comment">Lorem ipsum dolor sit amet, 
+                    <div class="saying__card">
+                        <p class="saying__card__comment">Lorem ipsum dolor sit amet, 
                             consectetur adipisicing elit. Doloribus 
                             accusamus expedita repellat similique 
                             odio aspernatur ex, architecto eaque 
                             quo suscipit.</p>
-                        <div class="saying__cards__card__person">
+                        <div class="saying__card__person">
                             <div>
                                 <img src="assets/images/avatar-jaydon.png" alt="davis">
                             </div>
@@ -123,13 +121,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="saying__cards__card">
-                        <p class="saying__cards__card__comment">Lorem ipsum dolor sit amet, 
+                    <div class="saying__card">
+                        <p class="saying__card__comment">Lorem ipsum dolor sit amet, 
                             consectetur adipisicing elit. Doloribus 
                             accusamus expedita repellat similique 
                             odio aspernatur ex, architecto eaque 
                             quo suscipit.</p>
-                        <div class="saying__cards__card__person">
+                        <div class="saying__card__person">
                             <div>
                                 <img src="assets/images/avatar-cooper.png" alt="davis">
                             </div>
@@ -138,8 +136,8 @@
                                 <p>Manager</p>
                             </div>
                         </div>
-                    </div>
-                </div>    
+                    </div> 
+                </div>
             </div>
         </section>
     </main>    
