--- a/index.html
+++ b/index.html
@@ -9,7 +9,58 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="wrapper">
+            <div class="header__content">
+                <div class="header__logo">
+                    <img src="/assets/images/icons/logo.svg" alt="logo AXIT">
+                </div>
+                <nav class="header__navigation">
+                    <ul>
+                        <li>Features</li>
+                        <li>About</li>
+                        <li>Pricing</li>
+                        <li>Reviews</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+            </div>        
+        </div>
+    </header>
     <main>
+        <section class="social-media">
+            <div class="wrapper">
+                <div class="social-media__cotent">
+                    <div class="social-media__info">
+                        <h3>Social Media</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Aenean euismod bibendum laoreet.</p>
+                    </div>
+                    <div class="icons-block">
+                        <div>
+                            <img src="assets/images/icons/facebook.svg" alt="facebook">
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/twitter.svg" alt="twitter">
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/ln.svg" alt="linkedin"></div>
+                        <div>
+                            <img src="assets/images/icons/pintrest.svg" alt="pintrest">
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/instagram.svg" alt="instagram">
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/git.svg" alt="git">
+                        </div>
+                        <div>
+                            <img src="assets/images/icons/rss.svg" alt="rss">
+                        </div>                     
+                    </div>
+                </div>             
+            </div>
+        </section>
         <section class="awesome">
             <div class="wrapper">
                 <div class="title-block">
@@ -79,8 +130,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        
+        </section> 
         <section class="saying">
             <div class="wrapper">
                 <div class="title-block">
@@ -140,6 +190,48 @@
                 </div>
             </div>
         </section>
-    </main>    
+        <section class="design">
+            <div class="wrapper">
+                <div class="title-block">
+                    <h2>STYLISH AXURE DESIGN</h2>
+                    <div class="title-block__separator"></div>
+                    <p>Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+                </div>
+                <div class="design__button">
+                    <a href="#" class="btn-1">Download</a>
+                </div>
+                
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__content">
+                <div class="icons-block">
+                    <div>
+                        <img src="assets/images/icons/facebook.svg" alt="facebook">
+                    </div>
+                    <div>
+                        <img src="assets/images/icons/twitter.svg" alt="twitter">
+                    </div>
+                    <div>
+                        <img src="assets/images/icons/ln.svg" alt="linkedin"></div>
+                    <div>
+                        <img src="assets/images/icons/pintrest.svg" alt="pintrest">
+                    </div>
+                    <div>
+                        <img src="assets/images/icons/instagram.svg" alt="instagram">
+                    </div>
+                    <div>
+                        <img src="assets/images/icons/git.svg" alt="git">
+                    </div>
+                    <div>
+                        <img src="assets/images/icons/rss.svg" alt="rss">
+                    </div>                     
+                </div>
+                <p>© 2015 Axure Themes</p>
+            </div>
+        </div>
+    </footer>    
 </body>
 </html>
