--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <div class="header__content">
                 <div class="header__logo">
-                    <img src="/assets/images/icons/logo.svg" alt="logo AXIT">
+                    <img src="/assets/images/logo.png" alt="logo AXIT">
                 </div>
                 <nav class="header__navigation">
                     <ul>
