feat: main section
add main section and fix logo header

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header class="header">
-        <div class="wrapper">
+        <div class="wrapper wrapper_header">
             <div class="header__content">
                 <div class="header__logo">
-                    <img src="/assets/images/icons/logo.svg" alt="logo-AXIT">
+                    <img src="assets/images/icons/logo.svg" alt="logo-AXIT">
                 </div>
                 <nav class="header__navigation">
                     <ul>
@@ -28,6 +28,20 @@
         </div>
     </header>
     <main>
+        <section class="main">
+            <div class="wrapper">
+                <div class="main__content">
+                    <div class="title-block">
+                        <img src="assets/images/icons/logo.svg" alt="logo-main" class="main__logo">
+                        <h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                        <div class="title-block__separator"></div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        <a href="#" class="btn-1">Download</a>
+                    </div>
+                    <div class="main__form"></div>
+                </div>
+            </div>
+        </section>
         <section class="social-media">
             <div class="wrapper">
                 <div class="social-media__cotent">
