--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                         <a href="#" class="btn-1">Download</a>
                     </div>
-                    <div class="main__form"></div>
+                    <form class="main__form">
+                        <div class="wrapper-main-form">
+                            <fieldset class="main__form__content">
+                                <h3>Try Your <span>FREE</span> Trial Today</h3>
+                                <input type="text" name="login" placeholder="Name">
+                                <input type="email" name="email" placeholder="Email">
+                                <input type="password" name="password" placeholder="Password">
+                            </fieldset>
+                        </div>
+                        <input type="submit" name="submit" value="Get Started" formaction="#">
+                    </form>
                 </div>
             </div>
         </section>
