--- a/index.html
+++ b/index.html
@@ -227,6 +227,30 @@
                 
             </div>
         </section>
+        <section class="contact">
+            <div class="wrapper">
+                <div class="title-block">
+                    <h2>CONTACT US</h2>
+                    <div class="title-block__separator"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <form action="" class="contact__form">
+                    <fieldset class="contact__form__content">
+                        <div class="left">
+                            <input type="text" name="login" placeholder="Name">
+                            <input type="email" name="email" placeholder="Email">
+                            <input type="password" name="password" placeholder="Password">
+                        </div>
+                        <div class="right">
+                            <textarea name="message" placeholder="Message"></textarea>
+                        </div>
+                    </fieldset>
+                    <div class="contact__button">
+                        <a href="#" class="btn-1">Seand Message</a>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="wrapper">
