--- a/index.html
+++ b/index.html
@@ -84,25 +84,12 @@
                 </div>             
             </div>
         </section>
-        <section class="tabs-content" id="features">
+        <section class="features" id="features">
             <div class="wrapper">
                 <div class="tabs">
-                    
-                    <input type="radio" name="tabs" id="tab-1" checked>
-                    <label for="tab-1">
-                        <p>tab 1</p>
-                    </label>
-                    <input type="radio" name="tabs" id="tab-2">
-                    <label for="tab-2">
-                        <p>tab 2</p>
-                    </label>
-                    <input type="radio" name="tabs" id="tab-3">
-                    <label for="tab-3">
-                        <p>tab 3</p>
-                    </label>
-                    
-                    <div id="tab-content-1" class="tab-content">
-                        <div class="tab-content__left">
+                    <label>tab 1<input type="radio" name="tab" checked></label>
+                    <div class="tabs__content">
+                        <div class="tabs__content__left">
                             <h3>Tabs with soft transitioning effect.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
                                 bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
@@ -112,17 +99,18 @@
                                 bibendum laoreet.</p>
                             <a href="#" class="btn-1">Download</a>
                         </div>
-                        <div class="tab-content__right">
+                        <div class="tabs__content__right">
                             <img src="assets/images/statue-of-liberty.png" alt="statue-of-liberty">
                         </div>
                     </div>
-                    <div id="tab-content-2" class="tab-content">
+                    <label>tab 2<input type="radio" name="tab"></label>
+                    <div class="tabs__content">
                         <p>2</p>
                     </div>
-                    <div id="tab-content-3" class="tab-content">
+                    <label>tab 3<input type="radio" name="tab"></label>
+                    <div class="tabs__content">
                         <p>3</p>
                     </div>
-
                 </div>
             </div>
         </section>
