--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/respons.css">
 </head>
 <body>
     <header class="header">
-        <div class="wrapper wrapper_header">
+        <div class="wrapper">
             <div class="header__content">
                 <div class="header__logo">
                     <img src="assets/images/icons/logo.svg" alt="logo-AXIT">
@@ -22,6 +23,9 @@
                     <a href="#reviews">Reviews</a>
                     <a href="#contact">Contact</a>
                 </nav>
+                <div class="header__burger">
+                    <img src="assets/images/icons/burger.svg" alt="burger">
+                </div>
             </div>        
         </div>
     </header>
@@ -100,7 +104,7 @@
                             <a href="#" class="btn-1">Download</a>
                         </div>
                         <div class="tabs__content__right">
-                            <img src="assets/images/statue-of-liberty.png" alt="statue-of-liberty">
+                            <!-- <img src="assets/images/statue-of-liberty.png" alt="statue-of-liberty"> -->
                         </div>
                     </div>
                     <label>tab 2<input type="radio" name="tab"></label>
@@ -240,6 +244,11 @@
                             </div>
                         </div>
                     </div> 
+                    <div class="saying__card__dots">
+                        <div class="saying__card__dot"></div>
+                        <div class="saying__card__dot"></div>
+                        <div class="saying__card__dot"></div>
+                    </div>
                 </div>
             </div>
         </section>
